--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -6,3 +6,16 @@ canvas{
     width:100%;
     height:100%;
 }
+
+.black{
+    color:black;
+}
+
+.toolbar{
+    height:50px;
+}
+
+.toolbar button img{
+    height:25px;
+    width:25px;
+}
