--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -1,21 +1,82 @@
-#spreadsheet-div{
-    height:500px;
+#spreadsheet-div {
+    display: flex;
+    flex-direction: column;
+    height: 70vh;
+}
+canvas {
+    width: 100%;
+    height: 100%;
+}
+.black {
+    color: black;
+}
+.toolbar {
+    height: 50px;
+}
+.toolbar button img {
+    height: 25px;
+    width: 25px;
+}
+.undo-redo-button:disabled {
+    color: #ACADAD;
+}
+.spreadsheet-row {
+    flex: 1;
+    display: flex;
+}
+.spreadsheet-col {
+    flex: 1;
+}
+.cell-image {
+    width: 100%;
+    height: 100%;
+}
+.cell {
+    outline: 1px solid black;
+    position: relative;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+}
+.cell-image {
+    height: 100%;
+    width: 100%;
+}
+.ui-selected .border {
+    width: 100%;
+    box-sizing: border-box;
+    border: 10px solid blue;
+}
+.ui-selecting .border {
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid blue;
+}
+.border {
+    position: absolute;
+    top: 0;
+}
+#spin-row, #spin-column {
+    width: 40px;
 }
 
-canvas{
-    width:100%;
-    height:100%;
+/*jquery css for multi selection click and drag*/
+.ui-selectable-helper{
+  position:absolute;
+  z-index:100;
+  border:1px dotted black;
 }
 
-.black{
-    color:black;
+#sheet-list{
+    display:inline-block;
+    list-style-type: none;
 }
-
-.toolbar{
-    height:50px;
+.sheet-list-item{
+    display:inline-block;
 }
-
-.toolbar button img{
-    height:25px;
-    width:25px;
+.btn{
+    border-radius: 0px;
+}
+button.activated{
+    
 }
