--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -228,15 +228,16 @@ button:focus{
     margin: 1px 0 0 10px;
     font-size: 18px;
 }
-.col-droppable-head{
+.spreadsheet-row .spreadsheet-col .droppable-head{
     display:inline-block;
     height:20px;
     width:50%;
     opacity: 0;
 }
-.col-draggable-head{
+.spreadsheet-row .spreadsheet-col .draggable-head{
     height:20px;
-    background-color:black;
+    background-color: #6D7F91;
+    cursor: pointer;
 }
 .head-left-border{
     border-left:1px solid white;
@@ -245,17 +246,56 @@ button:focus{
     height:20px;
     width:20px;
 }
-.row-droppable-head{
+.row-header-container .droppable-head{
     width:20px;
     height:50%;
     opacity: 0;
 }
-.row-draggable-head{
+.row-header-container .draggable-head{
     flex:1;
     width:20px;
-    background-color:black;
+    background-color: #6D7F91;
+    cursor: pointer;
 }
 .row-header-container{
     display: flex;
     flex-direction: column;
+}
+.cell-stack-top{
+    position:absolute;
+    height:100%;
+    width:100%;
+}
+.cell-stack-bottom{
+    position:absolute;
+    width:100%;
+    height:100%;
+    background-color: white;
+    color:black;
+    display:flex;
+}
+.plotter-to-top{
+    z-index: 1;
+}
+.plotter-plots{
+    flex:1;
+    /*display:inline-block;
+    width:50%;
+    height:100%;*/
+}
+.plotter-plots > div{
+    display:flex;
+    flex-direction: column;
+    height: 100%;
+}
+.plotter-plots > div > div{
+    flex: 1;
+}
+.plotter-add-plot{
+    flex:1;
+    /*display: inline-block;
+    width:50%;
+    height:100%;*/
+}
+.plotter-add-plot .glyphicon{
 }
