fixed annoying incorrect context but

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -278,12 +278,11 @@ button:focus{
     z-index: 1;
 }
 .plotter-plots{
-    flex:1;
-    /*display:inline-block;
-    width:50%;
-    height:100%;*/
+    width:100%;
+    display:flex;
 }
 .plotter-plots > div{
+    flex:1;
     display:flex;
     flex-direction: column;
     height: 100%;
@@ -293,9 +292,18 @@ button:focus{
 }
 .plotter-add-plot{
     flex:1;
-    /*display: inline-block;
-    width:50%;
-    height:100%;*/
 }
 .plotter-add-plot .glyphicon{
+}
+.plotter-var{
+    display: inline-block;
+    width:50%;
+    height:20px;
+    vertical-align: top;
+}
+.second-var{
+    background-color: gray;
+}
+.second-var-highlight{
+    background-color:yellow;
 }
