--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -368,3 +368,24 @@ button:focus {
 #file{
     display: none;
 }
+#file-tree{
+    max-height:80vh;
+    overflow:auto;
+}
+#file-tree a{
+    text-decoration: none;
+    display:inline-block;
+    width:100%;
+    cursor: pointer;
+}
+#file-tree a>i{
+    padding-right: 5px;
+}
+#file-tree .directory{
+    color: #EDC566;
+}
+
+#file-tree a.active{
+    padding: 0 5px 0 5px;
+    background-color: white;
+}
