--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -268,6 +268,7 @@ button:focus {
 }
 .cell-stack-top {
     position: absolute;
+    background-color:white;
     height: 100%;
     width: 100%;
 }
