Moved to vcs-widgets

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -363,8 +363,12 @@ button:focus {
     -ms-user-select: none;
 }
 
-li.tree-leaf.active {
+.tree li.tree-leaf.active, #temp-list>li.active {
     background-color: #df691a;
+}
+
+.tree li.tree-leaf.active a, #temp-list>li.active a {
+    color: white;
 }
 
 .tree li {
