--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -10,40 +10,15 @@ button:focus {
 .no-bullets {
     list-style-type: none;
 }
-#spreadsheet-div {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
+
 .black {
     color: black;
 }
 .toolbar {
-    height: 50px;
+    margin: 2px;
 }
 .undo-redo-button:disabled {
     color: #ACADAD;
-}
-.spreadsheet-row {
-    flex: 1;
-    display: flex;
-}
-.spreadsheet-col {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-.cell-image {
-    width: 100%;
-    height: 100%;
-}
-.cell {
-    flex: 1;
-    outline: 1px solid black;
-    position: relative;
-    background-color: white;
-    width: 100%;
-    height: 100%;
 }
 .ui-selected .border {
     width: 100%;
@@ -63,10 +38,7 @@ button:focus {
 #spin-row, #spin-column {
     width: 40px;
 }
-#sheet-list {
-    display: inline-block;
-    vertical-align: bottom;
-}
+
 .sheet-list-item {
     cursor: pointer;
 }
@@ -78,18 +50,19 @@ button:focus {
 }
 #left-side-bar {
     min-width: 200px;
-    display: inline-block;
     float: left;
     background-color: white;
-    height: 80vh !important;
+    height: 100%;
     vertical-align: top;
-    margin-right: 10px;
+    padding: 0;
 }
-#spreadsheet-container {
+.spreadsheet-container {
     display: flex;
     flex-flow: column;
-    float: none;
-    height: 80vh;
+    float: right;
+    height: 100%;
+    width: calc(100% - 200px);
+    padding-left: 2px;
 }
 #right-side-bar {
     width: 200px;
@@ -108,16 +81,15 @@ button:focus {
 #var-ulist li a {
     padding: 0 4px;
 }
-#main-container {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    display: inline;
+#app-container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
-#spreadsheet-toolbar {
-    padding-bottom: 3px;
-    min-height: 46px;
-    flex: 0;
+#main-container {
+    flex-grow: 1;
+    height: 100%;
+    margin: 2px;
 }
 #add-sheet-button {
     vertical-align: top;
@@ -136,6 +108,7 @@ button:focus {
 }
 .left-side-list {
     height: 33.33%;
+    background: #fafafa;
 }
 .right-side-list {
     /*height:50%;*/
@@ -153,10 +126,6 @@ button:focus {
 }
 #animation {
     height: 25%;
-}
-.nav li a {
-    padding-left: 5px;
-    padding-right: 5px;
 }
 .navbar {
     border-radius: 0;
@@ -213,53 +182,6 @@ button:focus {
     margin: 1px 0 0 10px;
     font-size: 18px;
 }
-.spreadsheet-row .spreadsheet-col .droppable-head {
-    display: inline-block;
-    height: 20px;
-    width: 50%;
-    opacity: 0;
-}
-.spreadsheet-row .spreadsheet-col .draggable-head {
-    height: 20px;
-    background-color: #6D7F91;
-    cursor: pointer;
-}
-.head-left-border {
-    border-left: 1px solid white;
-}
-#header-spacer {
-    height: 20px;
-    width: 20px;
-}
-.row-header-container .droppable-head {
-    width: 20px;
-    height: 50%;
-    opacity: 0;
-}
-.row-header-container .draggable-head {
-    flex: 1;
-    width: 20px;
-    background-color: #6D7F91;
-    cursor: pointer;
-}
-.row-header-container {
-    display: flex;
-    flex-direction: column;
-}
-.cell-stack-top, .cell-stack-bottom {
-    position: absolute;
-    background-color:white;
-    height: 100%;
-    width: 100%;
-}
-
-.cell-stack-top {
-    z-index: 1;
-}
-
-.cell-stack-bottom {
-    z-index: 0;
-}
 .plotter {
     display:flex;
     color: black;
@@ -311,36 +233,6 @@ button:focus {
     width: 40%;
     margin-right: 5px;
 }
-
-/* begin css spinner css */
-
-.spinner {
-    margin-right: 5px;
-    height: 39px;
-    display: inline-block;
-    width: 100px;
-}
-.spinner input {
-    vertical-align: top;
-    display: inline-block;
-    height: 100%;
-    text-align: right;
-    width: 75% !important;
-}
-.input-group-btn-vertical {
-    display: inline-block;
-    height: 100%;
-    width: 25%;
-}
-.input-group-btn-vertical> .btn {
-    display: block;
-    padding: 0;
-    width: 100%;
-    height: 50%;
-    border-radius: 0;
-}
-
-/* end css spinner css */
 
 .ui-sortable-placeholder {
     display: inline-block;
