initial implementation of dimension slider control; Remove previously implemented DoubleSlider;

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -292,10 +292,10 @@ li.tree-leaf {
     background-color: white;
 }
 
-input {
+/* input {
     width: 90%;
 }
 
 select {
     width: 93%;
-}
+} */
