Uses a fork of bootstrap-slider to support reverse direction dimension selection; Adds scss theme variables.

--- a/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
+++ b/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .navigation-bar{
     cursor: default;
     margin-bottom: 8px;
@@ -25,7 +27,7 @@
 }
 
 .navigation-bar .button.back:hover, .file-list li.selected {
-    background-color: #68A4D5;
+    background-color: $lighter;
     color: black;
 }
 
