--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .file-path {
     color: #333;
 }
@@ -45,7 +47,7 @@
             cursor: pointer;
 
             &:hover{
-                background-color: #68A4D5;
+                background-color: $lighter;
             }
         }
     }
