--- a/frontend/src/js/components/modals/CachedFiles/DimensionSlider/DimensionSlider.scss
+++ b/frontend/src/js/components/modals/CachedFiles/DimensionSlider/DimensionSlider.scss
@@ -1,31 +1,38 @@
+@import 'variables';
+
 .dimension-slider .slider.slider-horizontal .slider-handle {
-    width: 13px;
+    width: 15px;
     height: 17px;
     top: 2px;
     margin-left: -7px;
     border-radius: 3px;
+    background: #eee;
+    border: 1px solid #999;
+    background-color: #f3f3f3;
+
+    &::after{
+        line-height: 17px;
+        display: block;
+        text-align: center;
+    }
+
+    &.min-slider-handle {
+        &::after {
+            content: 'S';
+        }
+    }
+
+    &.max-slider-handle {
+        &::after {
+            content: 'E';
+        }
+    }
 }
 
 .dimension-slider {
     padding: 0 8px;
 
-    .inverse {
-        margin-left: 8px;
-
-        input {
-            position: relative;
-            top: 2px;
-            margin: 0 3px;
-        }
-
-        .inverse-label {
-            display: none;
-        }
-
-        &:hover{
-            .inverse-label {
-                display: inline;
-            }
-        }
+    .slider-selection {
+        background:$lighter;
     }
 }
