Add support for dimension range, and stride selection; Report dimension value without actually using it; other improvements;

--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -48,6 +48,7 @@
 
             &:hover{
                 background-color: $lighter;
+                color: black;
             }
         }
     }
