--- a/frontend/src/js/components/modals/ColormapEditor/ColormapWidget.css
+++ b/frontend/src/js/components/modals/ColormapEditor/ColormapWidget.css
@@ -37,3 +37,9 @@
         width: 35px;
     }
 }
+
+#export-modal>div.modal-dialog{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
