Adds border to plot cells

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -181,6 +181,9 @@ button:focus {
     margin: 1px 0 0 10px;
     font-size: 18px;
 }
+.cell{
+    border: 1px solid #cecece;
+}
 .plotter {
     display:flex;
     color: black;
