Adds a little css to bookmarks

--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -58,6 +58,7 @@
         min-height: 75px;
         max-height: 120px;
         overflow-y: auto;
+        overflow-x: hidden;
         .file {
             cursor: pointer;
             &:hover {
@@ -66,4 +67,12 @@
             }
         }
     }
+}
+
+.bookmarks{
+    height: auto;
+    min-height: 75px;
+    max-height: 120px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
