--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -178,6 +178,9 @@ button:focus {
 .cell{
     border: 1px solid #cecece;
 }
+.cell-selected{
+    border: 1px solid blue;
+}
 .plotter {
     display:flex;
     color: black;
