--- a/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
+++ b/frontend/src/js/components/modals/CachedFiles/CachedFiles.scss
@@ -16,11 +16,11 @@
     height: 100px;
 }
 
-div.cached-files div.slider.slider-horizontal {
+div.dimension-slider div.slider.slider-horizontal {
     width: 100%;
 }
 
-.cached-files .dimension {
+.dimensions .dimension {
     padding-top: 15px;
     padding-bottom: 20px;
     display: flex;
