Removes needless clear when plotting. Fixes issue where a canvas would show through borders

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -181,6 +181,9 @@ button:focus {
 .cell-selected{
     border: 1px solid blue;
 }
+.canvas-container{
+    overflow: hidden;
+}
 .plotter {
     display:flex;
     color: black;
