--- a/frontend/src/js/containers/TopBar/TopBar.scss
+++ b/frontend/src/js/containers/TopBar/TopBar.scss
@@ -1,14 +1,13 @@
-$top_nav_width: 150px;
-
 .top-bar{
     display: flex;
     height: 110px;
     border: #e7e7e7 1px solid;
     .navbar.navbar-default{
-        width: $top_nav_width;
+        width: 150px;
     }
 }
 
 .plot-inspector-container{
-    width: calc(100% - #{$top_nav_width}); // https://github.com/sass/sass/issues/818
+    width: 100%;
+    overflow-y: scroll;
 }
