Lists folders before files and changes folder color in FileExplorer.

--- a/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
+++ b/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
@@ -11,6 +11,14 @@
     list-style-type: none;
      padding-left: 0; 
     cursor: default;
+
+    .glyphicon-folder-open{
+        color: #e3783a;
+    }
+
+    li a:hover{
+        cursor: pointer;
+    }
 }
 
 .file-list .file-icon{
