--- a/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
+++ b/frontend/src/js/components/modals/FileExplorer/FileExplorer.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .navigation-bar{
+    display: flex;
     cursor: default;
     margin-bottom: 8px;
 }
@@ -9,11 +10,16 @@
     height: 40vh;
     overflow-y: scroll;
     list-style-type: none;
-     padding-left: 0; 
+    padding-left: 0;
     cursor: default;
 
     .glyphicon-folder-open{
         color: #e3783a;
+    }
+
+    li {
+        width: fit-content;
+        white-space: nowrap;
     }
 
     li a:hover{
@@ -51,13 +57,36 @@
     margin: 0 5px;
 }
 
-.file-list::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
-  background-color: #000; /* or add it to the track */
+.path-back-button{
+    flex-shrink: 0;
+    max-height: 36px;
 }
 
-.file-list::-webkit-scrollbar-thumb {
-    background: #aaa; 
+div.breadcrumbs{
+    width: 100%;
+    padding: 8px 15px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    height: auto;
+    max-height: 51px;
+}
+
+.breadcrumb-separator{
+    color: #ccc;
+    padding-left: 4px;
+    padding-right:4px;
+    min-width: 0;
+    display: inline-block;
+}
+
+div.breadcrumbs span {
+    display: inline-block;
+}
+
+div.breadcrumbs span a {
+    white-space: nowrap;
 }
 
