--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -412,3 +412,22 @@ li.tree-leaf {
     align-content: center;
     align-items: center;
 }
+
+.canvas-spinner-show span{
+    margin-left: 5px;
+}
+
+.loading-spinner {
+    border: 3px solid #f3f3f3;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border-top: 3px solid #555;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
