Fixes #221. Adds cell select when dropping on the plus symbol in a cell. Adds cell select indication on mouse hover

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -215,7 +215,10 @@ button:focus {
 .cell{
     border: 1px solid #cecece;
 }
-.cell-selected{
+.cell:hover{
+    border: 1px solid rgb(175, 175, 255);
+}
+.cell.cell-selected{
     border: 1px solid blue;
 }
 .canvas-container{
