Removes svg file and inlines it instead. Sets up color change for hover and drag over.

--- a/frontend/deps/Styles.css
+++ b/frontend/deps/Styles.css
@@ -240,6 +240,7 @@ button:focus {
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 100%;
 }
 .plotter-plots> div> div {
@@ -247,14 +248,21 @@ button:focus {
 }
 .plotter-add-plot {
     flex: 1;
+    max-width: 350px;
 }
 .plot {
     box-sizing: border-box;
     padding: 0 10px 0 10px;
 }
-.plotter-add-plot> img {
-    height: 100%
+
+.plotter-add-plot > svg:hover circle{
+    stroke: lime;
 }
+
+.plotter-add-plot > svg:hover path{
+    fill: lime;
+}
+
 .plot-var {
     display: inline-block;
     width: 50%;
